formating readme and latex

--- a/report/report.tex
+++ b/report/report.tex
@@ -23,17 +23,6 @@ Gloss es una biblioteca de Haskell que facilita la creación de gráficos y anim
 El proyecto está organizado en varios archivos y carpetas, cada uno con un papel específico:
 
 \subsection{game/}
-\begin{itemize}
-    \item \textbf{stack.yaml}: Archivo de configuración para Stack, incluyendo las dependencias necesarias para compilar y ejecutar el juego.
-\end{itemize}
-
-\subsection{assets/}
-Esta carpeta almacena todos los recursos utilizados en el juego.
-\begin{itemize}
-    \item \textbf{images/}: Imágenes utilizadas en el juego (por ejemplo, sprites de las fichas).
-    \item \textbf{sounds/}: Archivos de sonido para efectos o música de fondo.
-    \item \textbf{fonts/}: Fuentes utilizadas para mostrar texto en el juego.
-\end{itemize}
 
 \subsection{app/}
 \begin{itemize}
@@ -45,29 +34,13 @@ Esta carpeta contiene el código fuente del juego.
 \begin{itemize}
     \item \textbf{Game/}: Contiene la lógica principal del juego.
     \begin{itemize}
-        \item \textbf{Game.hs}: Controlador principal que gestiona el estado del juego y las interacciones entre los diferentes componentes.
-        \item \textbf{GameLogic.hs}: Implementa la lógica del juego, como mover y combinar fichas, así como verificar si el jugador ha ganado o perdido.
-        \item \textbf{Grid.hs}: Representa el tablero del juego, incluyendo su inicialización y actualizaciones.
-        \item \textbf{Tile.hs}: Define la estructura de una ficha en el juego, incluyendo su valor y posición.
-        \item \textbf{Score.hs}: Gestiona el sistema de puntuación del juego.
+        \item Controlador principal que gestiona el estado del juego y las interacciones entre los diferentes componentes.
+        Implementa la lógica del juego, como mover y fusionar fichas, así como verificar si el jugador ha ganado o perdido.
+        También representa el tablero del juego, incluyendo su inicialización y actualizaciones.
+        Define la estructura de una ficha en el juego, incluyendo su valor y posición.
+        Gestiona el sistema de puntuación del juego.
+        También maneja la parte gráfica del juego.
     \end{itemize}
-    \item \textbf{Graphics/}: Maneja la parte gráfica del juego.
-    \begin{itemize}
-        \item \textbf{Graphics.hs}: Configuraciones generales relacionadas con la biblioteca Gloss.
-        \item \textbf{Render.hs}: Funciones para renderizar el tablero, las fichas y otros elementos visuales en la pantalla.
-        \item \textbf{InputHandler.hs}: Gestiona los eventos de entrada del usuario, como las pulsaciones de teclas.
-    \end{itemize}
-    \item \textbf{Config/}: Contiene configuraciones generales del juego.
-    \begin{itemize}
-        \item \textbf{Config.hs}: Define constantes y configuraciones como el tamaño del tablero, colores, etc.
-    \end{itemize}
-\end{itemize}
-
-\subsection{tests/}
-Esta carpeta contiene pruebas unitarias y de integración para asegurar la calidad del código.
-\begin{itemize}
-    \item \textbf{GameTests.hs}: Pruebas relacionadas con la lógica del juego.
-    \item \textbf{GraphicsTests.hs}: Pruebas relacionadas con la parte gráfica.
 \end{itemize}
 
 \end{document}
